<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context="lugassi.wallach.android5778_2638_6575_client.controller.AddCarModel">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/OrangeRed"
                android:padding="15dp"
                android:text="@string/textCarModelDetails"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/hintName"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".35"
                    android:text="@string/textCompany"
                    android:textColor="@color/OrangeRed"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/companySpinner"
                    style="@style/spinner_style"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_margin="0dp"
                    android:layout_weight="0.65" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".35"
                    android:text="@string/textEngineCapacity"
                    android:textColor="@color/OrangeRed"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/engineCapacitySpinner"
                    style="@style/spinner_style"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_margin="0dp"
                    android:layout_weight="0.65" />
            </LinearLayout>

            <EditText
                android:id="@+id/seatsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/hintSeats"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".35"
                    android:text="@string/textCarType"
                    android:textColor="@color/OrangeRed"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/carTypeSpinner"
                    style="@style/spinner_style"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_margin="0dp"
                    android:layout_weight="0.65" />
            </LinearLayout>

            <EditText
                android:id="@+id/maxGasEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/hintMaxGas"
                android:inputType="number" />

            <Button
                android:id="@+id/button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape"
                android:text="@string/buttonAdd"
                android:textColor="@color/Black" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
