<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lugassi.wallach.android5778_2638_6575_client.controller.ManageActivity">
    <ScrollView
        android:background="@color/White"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/add_branch_activity_button"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_shape"
                android:textColor="@color/Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonAddBranch" />

            <Button
                android:id="@+id/add_carModel_activity_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape"
                android:text="@string/buttonAddCArModel"
                android:textColor="@color/Black" />

            <Button
                android:id="@+id/add_car_activity_button"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_shape"
                android:textColor="@color/Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonAddCar" />

            <Button
                android:id="@+id/show_branch_activity_button"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_shape"
                android:textColor="@color/Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonManage" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
